--- a/Menu2.html
+++ b/Menu2.html
@@ -27,103 +27,109 @@
 				<button class="menu__like"><i class="far fa-heart"></i></button>
 			</div>
 
-			<h4 class="menu__subtitle">Entrées</h4>
-			<div class="menu__green-line"></div>
+			<div class="menu__part">
+				<h4 class="menu__subtitle">Entrées</h4>
+				<div class="menu__green-line"></div>
 
-			<div class="choice">
-				<div class="choice__description">
-					<h5 class="choice__heading">Ravioles de foie gras</h5>
-					<p class="choice__side">Accompagnés de leur crème à la truffe</p>
-					<p class="choice__price">25€</p>
+				<div class="choice">
+					<div class="choice__description">
+						<h5 class="choice__heading">Ravioles de foie gras</h5>
+						<p class="choice__side">Accompagnés de leur crème à la truffe</p>
+						<p class="choice__price">25€</p>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
-				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+
+				<div class="choice">
+					<div class="choice__description">
+						<h5 class="choice__heading">Caviar osciètre</h5>
+						<p class="choice__side">Sur blini à la farine de blé noir</p>
+						<p class="choice__price">20€</p>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+				</div>
+
+				<div class="choice">
+					<div class="choice__description">
+						<h5 class="choice__heading">Homard et espuma de potiron</h5>
+						<p class="choice__side">Mariné aux zestes d'orange</p>
+						<p class="choice__price">20€</p>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+				</div>
+
+				<div class="choice">
+					<div class="choice__description">
+						<h5 class="choice__heading">Foie gras de canard cuit entier</h5>
+						<p class="choice__side">Confiture de figue et pain toasté</p>
+						<p class="choice__price">35€</p>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+				</div>
 			</div>
 
-			<div class="choice">
-				<div class="choice__description"></div>
-					<h5 class="choice__heading">Caviar osciètre</h5>
-					<p class="choice__side">Sur blini à la farine de blé noir</p>
-					<p class="choice__price">35€</p>
+			<div class="menu__part">
+				<h4 class="menu__subtitle">Plats</h4>
+				<div class="menu__green-line"></div>
+
+				<div class="choice">
+					<div class="choice__description">
+						<h5 class="choice__heading">Noix de coquilles Saint-Jacques</h5>
+						<p class="choice__side">Sur lit de purée de céleri-rave</p>
+						<p class="choice__price">40€</p>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
-				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+
+				<div class="choice">
+					<div class="choice__description">
+						<h5 class="choice__heading">Langoustine poêlée</h5>
+						<p class="choice__side">Purée de patate douce</p>
+						<p class="choice__price">35€</p>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+				</div>
+
+				<div class="choice">
+					<div class="choice__description">
+						<h5 class="choice__heading">Mijoté de queue de boeuf</h5>
+						<p class="choice__side">Et riz sauvage aux zestes de citron</p>
+						<p class="choice__price">44€</p>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+				</div>
 			</div>
 
-			<div class="choice">
-				<div class="choice__description">
-					<h5 class="choice__heading">Homard et espuma de potiron</h5>
-					<p class="choice__side">Mariné aux zestes d'orange</p>
-					<p class="choice__price">20€</p>
+			<div class="menu__part">
+				<h4 class="menu__subtitle">Desserts</h4>
+				<div class="menu__green-line"></div>
+
+				<div class="choice">
+					<div class="choice__description">
+						<h5 class="choice__heading">Macaron noisette et chocolat</h5>
+						<p class="choice__side">Glace au caramel brun et sel de Guérande</p>
+						<p class="choice__price">18€</p>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
-				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-			</div>
 
-			<div class="choice">
-				<div class="choice__description">
-					<h5 class="choice__heading">Foie gras de canard cuit entier</h5>
-					<p class="choice__side">Confiture de figue et pain toasté</p>
-					<p class="choice__price">35€</p>
+				<div class="choice">
+					<div class="choice__description">
+						<h5 class="choice__heading">Baba au rhum revisité</h5>
+						<p class="choice__side">Avec son coulis de citron</p>
+						<p class="choice__price">22€</p>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
-				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-			</div>
 
-			<h4 class="menu__subtitle">Plats</h4>
-			<div class="menu__green-line"></div>
-
-			<div class="choice">
-				<div class="choice__description">
-					<h5 class="choice__heading">Noix de coquilles Saint-Jacques</h5>
-					<p class="choice__side">Sur lit de purée de céleri-rave</p>
-					<p class="choice__price">40€</p>
+				<div class="choice">
+					<div class="choice__description">
+						<h5 class="choice__heading">Tarte au citron meringuée </h5>
+						<p class="choice__side">Déstructurée</p>
+						<p class="choice__price">23€</p>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
-				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-			</div>
-
-			<div class="choice">
-				<div class="choice__description">
-					<h5 class="choice__heading">Langoustine poêlée</h5>
-					<p class="choice__side">Purée de patate douce</p>
-					<p class="choice__price">35€</p>
-				</div>
-				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-			</div>
-
-			<div class="choice">
-				<div class="choice__description">
-					<h5 class="choice__heading">Mijoté de queue de boeuf</h5>
-					<p class="choice__side">Et riz sauvage aux zestes de citron</p>
-					<p class="choice__price">44€</p>
-				</div>
-				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-			</div>
-
-			<h4 class="menu__subtitle">Desserts</h4>
-			<div class="menu__green-line"></div>
-
-			<div class="choice">
-				<div class="choice__description">
-					<h5 class="choice__heading">Macaron noisette et chocolat</h5>
-					<p class="choice__side">Glace au caramel brun et sel de Guérande</p>
-					<p class="choice__price">18€</p>
-				</div>
-				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-			</div>
-
-			<div class="choice">
-				<div class="choice__description">
-					<h5 class="choice__heading">Baba au rhum revisité</h5>
-					<p class="choice__side">Avec son coulis de citron</p>
-					<p class="choice__price">22€</p>
-				</div>
-				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-			</div>
-
-			<div class="choice">
-				<div class="choice__description">
-					<h5 class="choice__heading">Tarte au citron meringuée </h5>
-					<p class="choice__side">Déstructurée</p>
-					<p class="choice__price">23€</p>
-				</div>
-				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 			</div>
 			
 			<button class="menu__command">Commander</button>
