--- a/Menu4.html
+++ b/Menu4.html
@@ -28,96 +28,102 @@
 				<button class="menu__like"><i class="far fa-heart"></i></button>
 			</div>
 
-			<h4 class="menu__subtitle">Entrées</h4>
-			<div class="menu__green-line"></div>
+			<div class="menu__part">
+				<h4 class="menu__subtitle">Entrées</h4>
+				<div class="menu__green-line"></div>
 
-			<div class="choice">
-				<div class="choice__description">
-					<h5 class="choice__heading">Tartare de thon</h5>
-					<p class="choice__side">Assaisonné au yuzu</p>
-					<p class="choice__price">25€</p>
+				<div class="choice">
+					<div class="choice__description">
+						<h5 class="choice__heading">Tartare de thon</h5>
+						<p class="choice__side">Assaisonné au yuzu</p>
+						<p class="choice__price">25€</p>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
-				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+
+				<div class="choice">
+					<div class="choice__description">
+						<h5 class="choice__heading">Bouchée de homard croustillant</h5>
+						<p class="choice__side">Et sa farandole de petits légumes</p>
+						<p class="choice__price">35€</p>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+				</div>
+
+				<div class="choice">
+					<div class="choice__description">
+						<h5 class="choice__heading">Velouté de cèpes</h5>
+						<p class="choice__side">Aux truffes</p>
+						<p class="choice__price">20€</p>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+				</div>
 			</div>
 
-			<div class="choice">
-				<div class="choice__description">
-					<h5 class="choice__heading">Bouchée de homard croustillant</h5>
-					<p class="choice__side">Et sa farandole de petits légumes</p>
-					<p class="choice__price">35€</p>
+			<div class="menu__part">
+				<h4 class="menu__subtitle">Plats</h4>
+				<div class="menu__green-line"></div>
+
+				<div class="choice">
+					<div class="choice__description">
+						<h5 class="choice__heading">Poulet rôti aux herbes de Provence</h5>
+						<p class="choice__side">Et sa crème de truffe</p>
+						<p class="choice__price">40€</p>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
-				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+
+				<div class="choice">
+					<div class="choice__description">
+						<h5 class="choice__heading">Langouste rôtie </h5>
+						<p class="choice__side">Et ses légumes de saison</p>
+						<p class="choice__price">35€</p>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+				</div>
+
+				<div class="choice">
+					<div class="choice__description">
+						<h5 class="choice__heading">Côte de boeuf Angus</h5>
+						<p class="choice__side">Et sa purée de panais</p>
+						<p class="choice__price">44€</p>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+				</div>
 			</div>
 
-			<div class="choice">
-				<div class="choice__description">
-					<h5 class="choice__heading">Velouté de cèpes</h5>
-					<p class="choice__side">Aux truffes</p>
-					<p class="choice__price">20€</p>
+			<div class="menu__part">
+				<h4 class="menu__subtitle">Desserts</h4>
+				<div class="menu__green-line"></div>
+
+				<div class="choice">
+					<div class="choice__description">
+						<h5 class="choice__heading">Farandole de desserts</h5>
+						<p class="choice__side">Du chef</p>
+						<p class="choice__price">18€</p>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
-				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-			</div>
 
-			<h4 class="menu__subtitle">Plats</h4>
-			<div class="menu__green-line"></div>
-
-			<div class="choice">
-				<div class="choice__description">
-					<h5 class="choice__heading">Poulet rôti aux herbes de Provence</h5>
-					<p class="choice__side">Et sa crème de truffe</p>
-					<p class="choice__price">40€</p>
+				<div class="choice">
+					<div class="choice__description">
+						<h5 class="choice__heading">Crème brulée</h5>
+						<p class="choice__side">Revisitée</p>
+						<p class="choice__price">22€</p>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
-				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-			</div>
 
-			<div class="choice">
-				<div class="choice__description">
-					<h5 class="choice__heading">Langouste rôtie </h5>
-					<p class="choice__side">Et ses légumes de saison</p>
-					<p class="choice__price">35€</p>
+				<div class="choice">
+					<div class="choice__description">
+						<h5 class="choice__heading">Tiramisu</h5>
+						<p class="choice__side">À la noisette</p>
+						<p class="choice__price">23€</p>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
-				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 			</div>
-
-			<div class="choice">
-				<div class="choice__description">
-					<h5 class="choice__heading">Côte de boeuf Angus</h5>
-					<p class="choice__side">Et sa purée de panais</p>
-					<p class="choice__price">44€</p>
-				</div>
-				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-			</div>
-
-			<h4 class="menu__subtitle">Desserts</h4>
-			<div class="menu__green-line"></div>
-
-			<div class="choice">
-				<div class="choice__description">
-					<h5 class="choice__heading">Farandole de desserts</h5>
-					<p class="choice__side">Du chef</p>
-					<p class="choice__price">18€</p>
-				</div>
-				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-			</div>
-
-			<div class="choice">
-				<div class="choice__description">
-					<h5 class="choice__heading">Crème brulée</h5>
-					<p class="choice__side">Revisitée</p>
-					<p class="choice__price">22€</p>
-				</div>
-				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-			</div>
-
-			<div class="choice">
-				<div class="choice__description">
-					<h5 class="choice__heading">Tiramisu</h5>
-					<p class="choice__side">À la noisette</p>
-					<p class="choice__price">23€</p>
-				</div>
-				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
-			</div>
-
+			
 			<button class="menu__command">Commander</button>
 
 		</section>
