--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<h2 class="grid__heading">Restaurants</h2>
 
 			<a href="Menu1.html">
-				<figure class="restaurant">
+				<figure class="restaurant restaurant__1">
 					<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La palette du goût" class="restaurant__image">
 					<div class="restaurant__new">Nouveau</div>
 					<figcaption>
@@ -66,7 +66,7 @@
 			</a>
 
 			<a href="Menu2.html">
-				<figure class="restaurant">
+				<figure class="restaurant restaurant__2">
 					<img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée" class="restaurant__image">
 					<div class="restaurant__new">Nouveau</div>
 					<figcaption>
@@ -78,7 +78,7 @@
 			</a>
 
 			<a href="Menu3.html">
-				<figure class="restaurant">
+				<figure class="restaurant restaurant__3">
 					<img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant À la française" class="restaurant__image">
 					<figcaption>
 						<h3 class="restaurant__heading">À la française</h3>
@@ -89,7 +89,7 @@
 			</a>
 
 			<a href="Menu4.html">
-				<figure class="restaurant">
+				<figure class="restaurant restaurant__4">
 					<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le délices des sens" class="restaurant__image">
 					<figcaption>
 						<h3 class="restaurant__heading">Le délices des sens</h3>
